RA-547: Add application insights into web apps

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -44,6 +44,7 @@
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <httpHandlers>
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
@@ -157,6 +158,8 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common" />
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <!--<security>
       <ipSecurity allowUnlisted="false">
