--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -48,6 +48,7 @@
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
   <system.webServer>
@@ -94,6 +95,8 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common" />
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <!--<security>
       <ipSecurity allowUnlisted="false">
