RA-547: Adding exception handling to app insights

--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -226,6 +226,7 @@
     </Compile>
     <Compile Include="ActionResults\HttpCustomStatusCodeResult.cs" />
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
+    <Compile Include="Attributes\AiHandleErrorAttribute.cs" />
     <Compile Include="Attributes\ApplyAnalyticsAttribute.cs" />
     <Compile Include="Attributes\AuthorizationDataAttribute.cs" />
     <Compile Include="Attributes\OwinSessionTimeoutAttribute.cs" />
