--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -209,6 +209,7 @@
     <extensions>
       <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
       <add assembly="NLog.Contrib" />
+      <add assembly="Microsoft.ApplicationInsights.NLogTarget" />
     </extensions>
     <variable name="environment" value="Local" />
     <targets async="true">
@@ -234,9 +235,11 @@
           <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
+      <target xsi:type="ApplicationInsightsTarget" name="aiTarget" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+      <logger name="*" minlevel="Trace" writeTo="aiTarget" />
     </rules>
   </nlog>
   <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
