--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -207,6 +207,7 @@
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <extensions>
       <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
+      <add assembly="Microsoft.ApplicationInsights.NLogTarget" />
     </extensions>
     <variable name="environment" value="Local" />
     <targets async="true">
@@ -234,9 +235,11 @@
           <property name="formData" layout="${mdlc:FormData}" />
         </layout>
       </target>
+      <target xsi:type="ApplicationInsightsTarget" name="aiTarget" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+      <logger name="*" minlevel="Trace" writeTo="aiTarget" />
     </rules>
   </nlog>
   <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
