--- a/src/SFA.Apprenticeships.Web.Candidate/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.config
@@ -249,6 +249,7 @@
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <extensions>
       <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
+      <add assembly="Microsoft.ApplicationInsights.NLogTarget" />
     </extensions>
     <variable name="environment" value="Local" />
     <targets async="true">
@@ -274,9 +275,11 @@
           <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
+      <target xsi:type="ApplicationInsightsTarget" name="aiTarget" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+      <logger name="*" minlevel="Trace" writeTo="aiTarget" />
     </rules>
   </nlog>
 </configuration>
