--- a/src/SFA.Apprenticeships.Web.Candidate/packages.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.NLogTarget" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
@@ -30,7 +31,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Caching" version="2.7.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="NLog" version="4.0.1" targetFramework="net451" />
+  <package id="NLog" version="4.4.1" targetFramework="net451" />
   <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net451" />
   <package id="RazorGenerator.Mvc" version="2.4.2" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
