--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.NLogTarget" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
@@ -52,7 +53,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="NLog" version="4.0.1" targetFramework="net452" />
+  <package id="NLog" version="4.4.1" targetFramework="net451" />
   <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RazorGenerator.Mvc" version="2.4.2" targetFramework="net451" />
