--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -60,7 +60,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
