--- a/src/SFA.DAS.RAA.Api/packages.config
+++ b/src/SFA.DAS.RAA.Api/packages.config
@@ -34,6 +34,6 @@
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
 </packages>
