--- a/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/app.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/app.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.30826.1200" newVersion="4.0.30826.1200" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.7.0" newVersion="2.0.7.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
